2 unused files deleted

--- a/WebDevelopment/JavaScriptFrameworks/04.RequireJS/01.StudentsSinglePageApp/01.StudentsSinglePageApp.csproj
+++ b/WebDevelopment/JavaScriptFrameworks/04.RequireJS/01.StudentsSinglePageApp/01.StudentsSinglePageApp.csproj
@@ -57,12 +57,11 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="define-dependencies.html" />
+    <Content Include="index.html" />
     <Content Include="packages.config" />
     <Content Include="Scripts\app-config.js" />
     <Content Include="Scripts\app\controls.js" />
     <Content Include="Scripts\app\data-persister.js" />
-    <Content Include="Scripts\data\people.js" />
     <Content Include="Scripts\libs\class.js" />
     <Content Include="Scripts\libs\http-requester.js" />
     <None Include="Scripts\libs\jquery-2.0.3.intellisense.js" />
