--- a/WebDevelopment/JavaScriptFrameworks/03.Modernizr/02.ModernizrPolyfills/02.ModernizrPolyfills.csproj
+++ b/WebDevelopment/JavaScriptFrameworks/03.Modernizr/02.ModernizrPolyfills/02.ModernizrPolyfills.csproj
@@ -7,12 +7,12 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{96B27306-33D3-4FEF-B343-2ED05920B162}</ProjectGuid>
+    <ProjectGuid>{195CEE8C-0CD6-4678-881F-9662EA8A0B4E}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_03.DatePicker</RootNamespace>
-    <AssemblyName>03.DatePicker</AssemblyName>
+    <RootNamespace>_02.ModernizrPolyfills</RootNamespace>
+    <AssemblyName>02.ModernizrPolyfills</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
@@ -57,26 +57,39 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="index.html" />
-    <None Include="Scripts\jquery-2.0.3.intellisense.js" />
-    <Content Include="Scripts\jquery-2.0.3.js" />
-    <Content Include="Scripts\jquery-2.0.3.min.js" />
-    <Content Include="Scripts\modernizr.custom.56880.js" />
-    <Content Include="styles\jquery-ui.css" />
+    <Content Include="canvas.html" />
+    <Content Include="geolocation.html" />
+    <Content Include="localStorage.html" />
+    <Content Include="scripts\canvasFunc.js" />
+    <Content Include="scripts\flash-canvas\canvas2png.js" />
+    <Content Include="scripts\flash-canvas\flashcanvas.js" />
+    <Content Include="scripts\flash-canvas\flashcanvas.swf" />
+    <Content Include="scripts\geo.js" />
+    <Content Include="packages.config" />
+    <None Include="scripts\jquery-2.0.3.intellisense.js" />
+    <Content Include="scripts\jquery-2.0.3.js" />
+    <Content Include="scripts\jquery-2.0.3.min.js" />
+    <Content Include="scripts\modernizr.custom.56880.js" />
+    <Content Include="scripts\polyfill.js" />
+    <Content Include="scripts\storage.js" />
     <Content Include="Web.config" />
-    <Content Include="Scripts\jquery-2.0.3.min.map" />
+    <Content Include="scripts\jquery-2.0.3.min.map" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="packages.config" />
+    <Content Include="scripts\flash-canvas\proxy.php" />
+    <Content Include="scripts\flash-canvas\save.php" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="images\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -93,7 +106,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>0</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:63818/</IISUrl>
+          <IISUrl>http://localhost:53117/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
