--- a/WebDevelopment/ASP.NET-WebForms/03.WebAndHTMLControls/06.WebCalculator/Web.config
+++ b/WebDevelopment/ASP.NET-WebForms/03.WebAndHTMLControls/06.WebCalculator/Web.config
@@ -6,6 +6,7 @@
 <configuration>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" requestValidationMode="2.0" />
+    <pages validateRequest="false" />
   </system.web>
 </configuration>
